Fixed spacing and text size on text component

--- a/src/app/styles/Hero_3.module.css
+++ b/src/app/styles/Hero_3.module.css
@@ -30,3 +30,14 @@
     transform: translateX(-50%);
   }
 }
+
+@media (max-width: 768px) {
+  .carouselContainer {
+    height: 400px;
+  }
+
+  .carouselImage {
+    width: 80%;
+    height: 90%;
+  }
+}
